This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-03-24:

- We now support building a dynamically linked ksh 93u+m with libast,
  libdll, libcmd, and libshell available as dynamic libraries for other
  applications to use. The dynamically linked version is built in a 'dyn'
  subdirectory; there are no changes to the statically linked version. See
  README.md for more information. Dynamic linking is tested and supported
  on Linux, Android, macOS, FreeBSD, NetBSD, OpenBSD, illumos and Solaris.
  Please test this on other platforms and send us your reports and patches.

2024-03-22:

- Fixed a crash in the getconf built-in that could occur after the 'builtin'
  command was used to bind it to the same path as the external getconf command.

2024-03-20:

- Android with Termux is now a supported environment for ksh 93u+m. Testing
  was done on Android 14.0 with Termux 0.118.0. Please report any breakage.
  Build dependencies (Termux packages): clang, binutils, getconf. Runtime
  depenencies: ncurses-utils (for --multiline), getconf (fallback for the
  /opt/ast/bin/getconf builtin).

2024-03-12:

- Fixed a regression in the 'printf' built-in, introduced on 2023-05-17,
  where each instance of '\0' or '%Z' in the format operand caused a string
  argument to be incorrectly skipped.

2024-03-10:

- Fixed a longstanding bug where the default terminal width for typeset -L, -R,
  or -Z, if not given, was miscalculated for multibyte or control characters.

- Fixed a crash on redefining an array inherited from the parent environment
  in a subshell.

- Fixed corner case breakage of univese handling in the 'echo' command: it
  broke when used in a namespace block before being used anywhere else, and
  only if _AST_FEATURES was not exported first. The bug caused _AST_FEATURES to